# deal-hunter

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
deploy/contabo/: .env.example  deploy-from-laptop.sh  docker-compose.yml
deploy/contabo/scripts/: cron-run.sh  healthcheck.sh
docs/scratch/: remote-pr-test-2026-04-18.md
src/deal_hunter/: cli.py  config.py
src/deal_hunter/analysis/: ai_normalizer.py  ai_scorer.py  groq_client.py  normalizer.py  pricing.py  red_flags.py  schemas.py  scorer.py
src/deal_hunter/data/: hardware_db.json
src/deal_hunter/db/: engine.py  models.py
src/deal_hunter/notifications/: telegram.py
src/deal_hunter/scrapers/: base.py  reddit.py  runner.py  techenclave.py
tests/: conftest.py
tests/test_analysis/: test_ai_normalizer.py  test_ai_scorer.py  test_normalizer.py  test_pricing.py  test_scorer.py  test_telegram.py
tests/test_db/: test_engine.py
tests/test_scrapers/: test_reddit.py  test_techenclave.py
