[project]
name = "deal-hunter"
version = "0.1.0"
description = "Second-hand hardware deal finder for India"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.13",
    "rich>=13.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "praw>=7.8",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
olx = [
    "curl_cffi>=0.7",
    "apify-client>=1.8",
]
browser = [
    "playwright>=1.45",
    "playwright-stealth>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "pytest-recording>=0.13",
    "ruff>=0.7",
]

[project.scripts]
deal-hunter = "deal_hunter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deal_hunter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
